# jsonplusplus

./: .gitignore  .ignore  LICENSE  README.md  ROADMAP_V1.md  data.json  decoder.py  encoder.py  main.py  pyproject.toml  requirements.txt  server.py  style.css  test.py  viewer.html
.github/workflows/: workflow.yml
logical/: decoder.py  encoder.py  main.py
src/jsonplusplus/: __init__.py  __main__.py  cli.py  decoder.py  encoder.py  exceptions.py  viewer.py
src/jsonplusplus/utils/: decoder.py  encoder.py  packing.py  type_detection.py
template /: about.html  contact.html  index.html
template /stylesheet/: about.css  contact.css  style.css
