[project]
name = "jsonplusplus"
version = "1.0.0"
description = "Un convertisseur JSON ↔ JSON++ optimisé"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nathan Josue"},
]

keywords = ["json", "json++", "data", "conversion", "parser"]

dependencies = []

[project.urls]
Homepage = "https://github.com/Nathan-Josue/jsonplusplus"
Repository = "https://github.com/Nathan-Josue/jsonplusplus"
Issues = "https://github.com/Nathan-Josue/jsonplusplus/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
